# Fetch-and-Delivery-Behaviour-for-an-Assistance-Robot

./: README.md
tiago_iaslab_simulation/: CMakeLists.txt  package.xml
tiago_iaslab_simulation/action/: Move.action
tiago_iaslab_simulation/include/: variables.h
tiago_iaslab_simulation/include/tiago_iaslab_simulation/: Human.h  utils.h
tiago_iaslab_simulation/launch/: mapping.launch  navigation.launch
tiago_iaslab_simulation/models/aws_simulation/aws_robomaker_retail_BookD_01/: model.sdf
tiago_iaslab_simulation/models/aws_simulation/aws_robomaker_retail_BookD_02/: model.sdf
tiago_iaslab_simulation/models/aws_simulation/aws_robomaker_retail_BookF_01/: model.sdf
tiago_iaslab_simulation/models/aws_simulation/aws_robomaker_retail_BookshelfB_01/: model.sdf
tiago_iaslab_simulation/models/aws_simulation/aws_robomaker_retail_BookshelfC_01/: model.sdf
tiago_iaslab_simulation/models/aws_simulation/aws_robomaker_retail_DeskA_01/: model.sdf
tiago_iaslab_simulation/src/: client_human_navigate.cpp  detection_server.cpp  pick_server.cpp  place_server.cpp  robot_srv.cpp  utils.cpp
tiago_iaslab_simulation/srv/: pickObj.srv  placeObj.srv  srv_detect.srv
