<?xml version="1.0"?>
<package format="2">
    <name>tiago_iaslab_simulation</name>
    <version>0.0.1</version>
    <description>The tiago_iaslab_simulation package</description>

    <maintainer email="alberto.gottardi@phd.unipd.it">Alberto Gottardi</maintainer>
    <author email="alberto.gottardi@phd.unipd.it">Alberto Gottardi</author>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>gazebo_ros</depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <build_depend>actionlib</build_depend>
    <exec_depend>actionlib</exec_depend>
    <build_depend>actionlib_msgs</build_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <build_depend>move_base_msgs</build_depend>
    <exec_depend>move_base_msgs</exec_depend>
    <build_depend>control_msgs</build_depend>
    <exec_depend>control_msgs</exec_depend>
    <build_depend>sensor_msgs</build_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <build_depend>trajectory_msgs</build_depend>
    <exec_depend>trajectory_msgs</exec_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
    <gazebo_ros
        gazebo_plugin_path="${prefix}/lib"
        gazebo_media_path="${prefix}"
        gazebo_model_path="${prefix}/models:${prefix}/..:${prefix}"/>
    </export>


</package>
